# tonic-web-client

./: Cargo.toml  Justfile  LICENSE_MIT  README.md
.github/workflows/: build.yml  gzip-wasm.yml  gzip.yml  test-wasm.yml  test.yml
src/: body_stream.rs  call.rs  client.rs  error.rs  lib.rs  response_body.rs
test-suite/gzip/client/: Cargo.toml
test-suite/gzip/client/tests/: web.rs
test-suite/gzip/server/: Cargo.toml
test-suite/simple/client/: Cargo.toml
test-suite/simple/client/tests/: web.rs
test-suite/simple/server/: Cargo.toml
