[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tonic = { version = "0.9", default-features = false, features = [
    "prost",
    "codegen",
    "gzip",
] }

[build-dependencies]
tonic-build = { version = "0.9", default-features = false, features = [
    "prost",
] }

[dev-dependencies]
tonic-web-client = { path = "../../.." }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.27", features = ["rt-multi-thread", "macros"] }
