[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
http = "0.2"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10"
tonic-web = "0.10"
tower-http = { version = "0.4", default-features = false, features = [
    "cors",
] }

[build-dependencies]
tonic-build = "0.10"
